Fixed overflow on notecards

--- a/src/components/notecard-container/index.css
+++ b/src/components/notecard-container/index.css
@@ -15,6 +15,7 @@
   align-items: center;
   width: 100%;
   padding: 2rem 0;
+  overflow: hidden;
 }
 
 .notecard-list-container::-webkit-scrollbar {
